# diht-networks-project

./: CMakeLists.txt  thirdparty.cmake
src/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp
src/common/: Allegro.hpp  Service.hpp  common.hpp
